--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top"><img src="img/SimpleLogoTransparent.png" width="25px"/></a>
+                <a class="navbar-brand page-scroll" href="#page-top">colony farm</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -88,7 +88,7 @@
     </header>
 
     <!-- Services Section -->
-    <section id="services">
+    <section id="services" class="bg-light-gray">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -110,7 +110,7 @@
                         <i class="fa fa-flask fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Farmers</h4>
-                    <p class="text-muted">We're putting farming first&mdash;developing new techniques to be the most efficient and most responsible we can</p>
+                    <p class="text-muted">We put farming first&mdash;developing new techniques to be the most efficient and most responsible we can</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -122,6 +122,20 @@
                 </div>
             </div>
         </div>
+    </section>
+
+    <!--TED Section-->
+    <section id="portfolio">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">TEDxKalamazoo College</h2>
+                    <h3 class="section-subheading text-muted">On March 28th, 2016, we're giving a TED talk at Kalamazoo College, our alma mater. </h3>
+                </div>
+                <div class="col-lg-12 text-center">
+                    <h3 class="text-muted">We'll be sharing our ideas of how we see the<br>entomophagy industry moving forward.</h3>
+                </div>
+            </div>
     </section>
 
     <!-- Portfolio Grid Section -->
@@ -161,7 +175,7 @@
                                     <h4 class="subheading">Henry made a joke...</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">...should we move to Portland and sell bugs to hipsters?</p>
+                                    <p class="text-muted">...should we move to Portland and sell bugs?</p>
                                 </div>
                             </div>
                         </li>
@@ -211,16 +225,16 @@
             <div class="row">
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/henry.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Henry Pointon</h4>
-                        <p class="text-muted">Bug Nerd</p>
+                        <img src="img/riley.jpg" class="img-responsive img-circle" alt="">
+                        <h4>Riley Lundquist</h4>
+                        <p class="text-muted">Responsible Business Nerd</p>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/riley.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Riley Lundquist</h4>
-                        <p class="text-muted">Responsible Business Nerd</p>
+                        <img src="img/henry.jpg" class="img-responsive img-circle" alt="">
+                        <h4>Henry Pointon</h4>
+                        <p class="text-muted">Bug Nerd</p>
                     </div>
                 </div>
                 <div class="col-sm-4">
@@ -233,7 +247,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p class="large text-muted">we enjoy climbing rocks, drinking whiskey, playing Pok&eacute;mon, and being insufferably weird</p>
+                    <p class="large text-muted">we enjoy climbing rocks, drinking whiskey and coffee, and being insufferably weird</p>
                 </div>
             </div>
         </div>
