--- a/index.html
+++ b/index.html
@@ -56,13 +56,16 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">About</a>
+                        <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Funding</a>
+                        <a class="page-scroll" href="#tedx">TEDx</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">Story</a>
+                        <a class="page-scroll" href="#funding">Funding</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#story">Story</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#team">Team</a>
@@ -88,7 +91,7 @@
     </header>
 
     <!-- Services Section -->
-    <section id="services" class="bg-light-gray">
+    <section id="about" class="bg-light-gray">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -107,7 +110,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-flask fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-envira fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Farmers</h4>
                     <p class="text-muted">We put farming first&mdash;developing new techniques to be the most efficient and most responsible we can</p>
@@ -125,12 +128,12 @@
     </section>
 
     <!--TED Section-->
-    <section id="portfolio">
+    <section id="tedx">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">TEDxKalamazoo College</h2>
-                    <h3 class="section-subheading text-muted">On March 28th, 2016, we're giving a TED talk at Kalamazoo College, our alma mater. </h3>
+                    <h2 class="section-heading">TEDxKalamazooCollege</h2>
+                    <h3 class="section-subheading text-muted">On March 28th, 2016, we're giving a talk for TEDx at Kalamazoo College, our alma mater. </h3>
                 </div>
                 <div class="col-lg-12 text-center">
                     <h3 class="text-muted">We'll be sharing our ideas of how we see the<br>entomophagy industry moving forward.</h3>
@@ -139,7 +142,7 @@
     </section>
 
     <!-- Portfolio Grid Section -->
-    <section id="portfolio" class="bg-light-gray">
+    <section id="funding" class="bg-light-gray">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -154,7 +157,7 @@
     </section>
 
     <!-- About Section -->
-    <section id="about">
+    <section id="story">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -167,7 +170,7 @@
                     <ul class="timeline">
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/portland-sign.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -181,7 +184,7 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/basement-setup.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -195,7 +198,7 @@
                         </li>
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/monkey.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -247,7 +250,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p class="large text-muted">we enjoy climbing rocks, drinking whiskey and coffee, and being insufferably weird</p>
+                    <p class="large text-muted">we enjoy climbing rocks, drinking whiskey and coffee, and cooking&mdash;with and without bugs</p>
                 </div>
             </div>
         </div>
