--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">TEDxKalamazooCollege</h2>
+                    <img src="img/tedx.png" alt="TEDxKalamazooCollege">
                     <h3 class="section-subheading text-muted">On March 28th, 2016, we're giving a talk for TEDx at Kalamazoo College, our alma mater. </h3>
                 </div>
                 <div class="col-lg-12 text-center">
@@ -305,7 +305,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">Colony Farm 2016<br>adapted from the Start Bootstrap Agency Theme</span>
+                    <span class="copyright">Riley Lundquist, 2016</span>
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
@@ -316,11 +316,12 @@
                     </ul>
                 </div>
                 <div class="col-md-4">
+                    <span class="copyright">adapted from the Start Bootstrap Agency Theme</span>
                     <ul class="list-inline quicklinks">
-                        <li><a href="#">Privacy Policy</a>
+                        <!--li><a href="#">Privacy Policy</a>
                         </li>
                         <li><a href="#">Terms of Use</a>
-                        </li>
+                        </li-->
                     </ul>
                 </div>
             </div>
